# snarky

./: .bazelrc  WORKSPACE.bazel  WORKSPACE.bzl
app/reformat-snarky/: BUILD.bazel
bench/: BUILD.bazel
bitstring_lib/: BUILD.bazel
bzl/ppx/exe/: BUILD.bazel
ctypes_foreign/: BUILD.bazel
examples/anonvote/: BUILD.bazel
examples/election/: BUILD.bazel
examples/elliptic_curve_operations/: BUILD.bazel
examples/merkle_update/: BUILD.bazel
examples/sfbw/ex_bools/: BUILD.bazel
examples/sfbw/ex_merkle_list/: BUILD.bazel
examples/sfbw/ex_merkle_tree/: BUILD.bazel
examples/sfbw/ex_merkle_tree_with_data/: BUILD.bazel
examples/sfbw/ex_preimage/: BUILD.bazel
examples/sfbw/ex_small_preimage/: BUILD.bazel
fold_lib/: BUILD.bazel
group_map/: BUILD.bazel
h_list/: BUILD.bazel
h_list/ppx/: BUILD.bazel
interval_union/: BUILD.bazel
jstest/src/: BUILD.bazel
ppx/: BUILD.bazel
snarkette/: BUILD.bazel
snarky_curve/: BUILD.bazel
snarky_curve/tests/: BUILD.bazel
snarky_integer/: BUILD.bazel
snarky_signature/: BUILD.bazel
snarky_universe/: BUILD.bazel
sponge/: BUILD.bazel
src/: BUILD.bazel
src/base/: BUILD.bazel
src/camlsnark_c/: BUILD.bazel
src/camlsnark_c/bindings/: BUILD.bazel
src/camlsnark_c/cpp_string/: BUILD.bazel
src/camlsnark_c/cpp_vector/: BUILD.bazel
src/camlsnark_c/libsnark-caml/caml/: BUILD.bazel
src/camlsnark_c/libsnark_bindings/: BUILD.bazel
src/intf/: BUILD.bazel
src/tests/: BUILD.bazel
tuple_lib/: BUILD.bazel
