load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_archive",
    "ocaml_module",
    "ocaml_ns_archive",
    "ocaml_signature",
)

################################################################
## STANZA 1: LIBRARY BITSTRING_LIB
################################################################
BITSTRING_LIB_SIGNATURE_OPTS = []

BITSTRING_LIB_MODULE_OPTS = []

BITSTRING_LIB_DEPS = []
BITSTRING_LIB_DEPS_OPAM = ["core_kernel"]

BITSTRING_LIB_PPX = "@//bzl/ppx/exe:ppx_jane__ppx_deriving.eq"

BITSTRING_LIB_PPX_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "bitstring_lib",
]

#########
ocaml_ns_archive(
    name = "bitstring_lib",
    submodules = {
        ":_Bitstring": "Bitstring",
    },
    visibility = ["//visibility:public"]
)

#############
ocaml_module(
    name = "_Bitstring",
    sig  = ":_Bitstring.cmi",
    opts = BITSTRING_LIB_MODULE_OPTS,
    ppx = BITSTRING_LIB_PPX,
    ppx_args = BITSTRING_LIB_PPX_ARGS,
    struct = "bitstring.ml",
    deps = ["//tuple_lib"],
    deps_opam = BITSTRING_LIB_DEPS_OPAM,
)

################
ocaml_signature(
    name = "_Bitstring.cmi",
    src = "bitstring.mli",
    opts = BITSTRING_LIB_SIGNATURE_OPTS,
    ppx = BITSTRING_LIB_PPX,
    ppx_args = BITSTRING_LIB_PPX_ARGS,
    deps = ["//tuple_lib:tuple_lib"],
    deps_opam = BITSTRING_LIB_DEPS_OPAM
)
