load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_library",
)

#########
ocaml_ns_library(
    name = "fold_lib",
    submodules = {
        ":_Fold": "Fold"
    },
    visibility = ["//visibility:public"],
)

#############
ocaml_module(
    name   = "_Fold",
    struct = "fold.ml",
    ppx = "@//bzl/ppx/exe:ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "fold_lib",
    ],
    deps_opam = [
        "core_kernel",
    ]
)
