load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_signature",
    "ocaml_module",
    "ocaml_ns_library",
    "ocaml_ns_archive",
)

################################################################
## STANZA 1: LIBRARY GROUP_MAP
################################################################
GROUP_MAP_INTERFACE_OPTS = []

GROUP_MAP_MODULE_OPTS = []

GROUP_MAP_DEPS = ["@snarky//snarkette"]
GROUP_MAP_DEPS_OPAM = ["core_kernel"]

GROUP_MAP_PPX = "@//bzl/ppx/exe:ppx_jane__ppx_deriving.eq"

GROUP_MAP_PPX_ARGS = [
    # do not sort (buildifier)
    "-inline-test-lib",
    "group_map",
]

#################
ocaml_ns_library(
    name   = "group_map",
    main   = ":_Group_map",
    submodules = {
        ":_Bw19": "Bw19",
        ":_Field_intf": "Field_intf",
        ":_Group_map": "Group_map",
    },
    visibility = ["//visibility:public"],
)

#############
ocaml_module(
    name = "_Bw19",
    opts = GROUP_MAP_MODULE_OPTS,
    ppx = GROUP_MAP_PPX,
    ppx_args = GROUP_MAP_PPX_ARGS,
    struct = "bw19.ml",
    deps_opam = GROUP_MAP_DEPS_OPAM,
	deps = GROUP_MAP_DEPS + [
        # do not sort (buildifier)
        ":_Field_intf",
    ],
)

#############
ocaml_module(
    name = "_Field_intf",
    opts = GROUP_MAP_MODULE_OPTS,
    ppx = GROUP_MAP_PPX,
    ppx_args = GROUP_MAP_PPX_ARGS,
    struct = "field_intf.ml",
    deps = GROUP_MAP_DEPS,
    deps_opam = GROUP_MAP_DEPS_OPAM,
)

#############
ocaml_module(
    name = "_Group_map",
    opts = GROUP_MAP_MODULE_OPTS,
    ppx = GROUP_MAP_PPX,
    ppx_args = GROUP_MAP_PPX_ARGS,
    sig = ":_Group_map.cmi",
    struct = "group_map.ml",
    deps_opam = GROUP_MAP_DEPS_OPAM,
	deps = GROUP_MAP_DEPS + [
        # do not sort (buildifier)
        ":_Bw19",
        ":_Field_intf",
    ],
)

################
ocaml_signature(
    name = "_Group_map.cmi",
    src = "group_map.mli",
    opts = GROUP_MAP_INTERFACE_OPTS,
    ppx = GROUP_MAP_PPX,
    ppx_args = GROUP_MAP_PPX_ARGS,
    deps_opam = GROUP_MAP_DEPS_OPAM,
	deps = GROUP_MAP_DEPS + [
        # do not sort (buildifier)
        ":_Bw19",
        ":_Field_intf",
    ],
)
