load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_signature",
    "ocaml_module",
)

#############
ocaml_module(
    name   = "interval_union",
    struct = "interval_union.ml",
    sig    = ":_Interval_union.cmi",
    ppx = "//bzl/ppx/exe:ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "interval_union",
    ],
    deps_opam = ["core_kernel"],
    visibility = ["//visibility:public"]
)

################
ocaml_signature(
    name = "_Interval_union.cmi",
    src = "interval_union.mli",
    ppx = "//bzl/ppx/exe:ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "interval_union",
    ],
    deps_opam = ["core_kernel"]
)
