load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    # "ppx_archive",
    "ppx_executable",
    "ppx_module",
)

PPX_SNARKY_DEPS_OPAM = [
    # do not sort (buildifier)
    "ppxlib",
    "ppx_tools",
    "core_kernel",
]

###########
ppx_module(
    name = "ppx_snarky",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
    # ns_env = ":_ns_env",
    ppx = ":ppx1.exe",
    struct = "ppx_snarky.ml",
    deps = [
        # do not sort (buildifier)
        ":Snarky_module",
        ":Snarkydef",
    ],
    visibility = ["//visibility:public"],
)

###########
ppx_module(
    name = "Snarky_module",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
    # ns_env = ":_ns_env",
    ppx = ":ppx1.exe",
    struct = "snarky_module.ml",
)

###########
ppx_module(
    name = "Snarkydef",
    struct = "snarkydef.ml",
    # ns_env = ":_ns_env",
    ppx = ":ppx1.exe",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
)

###############
ppx_executable(
    name = "ppx1.exe",
    deps_adjunct_opam = [
        "ppx_sexp_conv.runtime-lib",
    ],
    deps_opam = [
        "ppxlib.metaquot",
        "ppx_sexp_conv"
    ],
    main = "//bzl/ppx/exe:ppxlib_driver",
    visibility = [
        "//ppx:__pkg__",
    ],
)
