load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ppx_executable",
    "ppx_module",
    "ppx_ns_archive",
)

PPX_SNARKY_DEPS_OPAM = [
    # do not sort (buildifier)
    "ppxlib",
    "ppx_tools",
    "core_kernel",
]

#################
ppx_ns_archive(
    name = "ppx_snarky",
    opts = ["-linkall"],
    submodules = [
        ":_Ppx_snarky",
        ":_Snarky_module",
        ":_Snarkydef"
    ],
    visibility = ["//visibility:public"],
)

###########
ppx_module(
    name = "_Ppx_snarky",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
    ppx = ":ppx1.exe",
    struct = "ppx_snarky.ml",
    deps = [
        # do not sort (buildifier)
        ":_Snarky_module",
        ":_Snarkydef",
    ],
)

###########
ppx_module(
    name = "_Snarky_module",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
    ppx = ":ppx1.exe",
    struct = "snarky_module.ml",
)

###########
ppx_module(
    name = "_Snarkydef",
    struct = "snarkydef.ml",
    ppx = ":ppx1.exe",
    deps_opam = PPX_SNARKY_DEPS_OPAM,
)

###############
ppx_executable(
    name = "ppx1.exe",
    deps_adjunct_opam = [
        "ppx_sexp_conv.runtime-lib",
    ],
    deps_opam = [
        "ppxlib.metaquot",
        "ppx_sexp_conv"
    ],
    main = "//bzl/ppx/exe:ppxlib_driver",
    visibility = [
        "//ppx:__pkg__",
    ],
)
