load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_archive"
)

#################
ocaml_ns_archive(
    name = "snarky_curve",
    submodules = [
        ":_Snarky_curve"
    ],
    visibility = ["//visibility:public"],
)

#############
ocaml_module(
    name = "_Snarky_curve",
    struct = "snarky_curve.ml",
    ppx = "//bzl/ppx/exe:ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
        "-inline-test-lib",
        "snarky_curve",
    ],
    deps = [
        "//group_map:group_map",
        "//src/base:snarky_backendless",
    ],
    deps_opam = [
        "core_kernel",
        "digestif",
    ]
)
