load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_module",
    "ocaml_ns_library",
)

#########
ocaml_ns_library(
    name = "#snarky_signature",
    submodules = {
         ":_Signature": "Signature",
    },
    visibility = ["//snarky_universe:__pkg__"]
)

#############
ocaml_module(
    name = "_Signature",
    struct = "signature.ml",
    ppx = "@//bzl/ppx/exe:ppx_jane__ppx_deriving.eq",
    ppx_args = [
        # do not sort (buildifier)
    "-inline-test-lib",
        "snarky_signature",
    ],
    deps_opam = [
        "core_kernel",
    ]
)
